2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-about-me.desktop.in.in: renamed Bugzilla product.

2007-04-21  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.c: (about_me_setup_dialog): don't print a warning to
	the console if the "self" contact does not yet exist (closes bug
	#419332). Also fix a small memory leak

2007-04-08  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Kristof Vansant <de_lupus@pandora.be>

	* gnome-about-me.c: (about_me_image_clicked_cb): add image filter to
	file chooser (closes bug #424958)

2007-03-19  Jens Granseuer  <jensgr@gmx.net>

	Based on a patch by: Bastien Nocera <hadess@hadess.net>

	* Makefile.am: don't try to build about-me if it's been disabled in
	configure and make is run in the subdir (closes bug #408552)

2007-03-04  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Andreas Koehler <andi5.py@gmx.net>

	* gnome-about-me.glade: use proper shadow type for the address fields
	(fixes bug #414061)

2007-02-27  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me-password.c: (stop_passwd),
	(free_passwd_resources), (passdlg_process_response): another attempt
	at fixing bug #411697. The previous commit fell a bit short

2007-02-26  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me-password.c: (stop_passwd), (child_watch_remove),
	(free_passwd_resources): prevent the child watcher from accessing
	already released memory after the dialog has been closed (should fix
	bug #411697)

	* gnome-about-me-password.c: (gnome_about_me_password): unref dialog
	when we're done
	* gnome-about-me.c: (about_me_setup_dialog): remove redundant warning

2007-02-25  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Diego Escalante Urrelo <diego@aureal.com.pe>

	* e-image-chooser.c: (set_image_from_data): don't use a composite
	pixbuf, avoiding some unnecessary clipping (fixes bug #380315)

2007-02-25  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* gnome-about-me.c: (about_me_image_clicked_cb): change default dir for